# WorldQuant-Brain-Alpha

./: .env  .env.example  .gitignore  COMMON_OPERATIONS.md  README_AI_AGENT.md  pyproject.toml  requirements.txt  run_skeleton_only_validation.py
alpha_agent/: __init__.py  config.py  llm_utils.py
alpha_agent/data/: datafield_indexer.py  operator_kb.py  wqb_client.py
alpha_agent/data/assets/: operators.yaml  skeleton_seeds.yaml
alpha_agent/engine/: expr_synth_agent.py  idea_agent.py  orchestrator.py  reflector.py  skeleton_agent.py  skeleton_extractor.py  validator.py
alpha_agent/eval/: qualifier.py
alpha_agent/knowledge/: alpha_memory.py  paper_ingest.py  skeleton_registry.py  vector_store.py
alpha_agent/search/: bandit.py  novelty.py  track_bandit.py
data/: alpha_memory.db  alpha_memory.db.wal
data/chroma/: chroma.sqlite3
notebooks/: 01_setup_and_field_semantics.ipynb  02_build_operator_and_paper_kb.ipynb  03_idea_to_expression_demo.ipynb  04_closed_loop_generation.ipynb  05_results_and_novelty_analysis.ipynb  06_skeleton_lab.ipynb
notebooks/data/: alpha_memory.db.wal  alpha_memory_nb03_16582.db.wal
notebooks/data/chroma/: chroma.sqlite3
notebooks/data/papers/: 5 ways to potentially increase returns of an alpha.md  Clear these tests before submitting an Alpha _ WorldQuant BRAIN.html  How BRAIN works.md  How can you avoid overfitting.md  How can you avoid overfitting_ – WorldQuant BRAIN.html  How do you get a higher Sharpe.md  How do you get a higher Sharpe_ – WorldQuant BRAIN.html  Introduction to Alphas.md  (+15 more)
tests/: test_skeleton_extractor.py
